--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -1,281 +1,77 @@
-name: foodgram-ci-cd
-
-on:
-  push:
-    branches: ["main"]
-    tags: ["v*"]
-  workflow_dispatch:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
-permissions:
-  contents: read
-
-env:
-  REGISTRY_USER: ${{ secrets.DOCKER_USERNAME }}
-  REGISTRY_PASS: ${{ secrets.DOCKER_PASSWORD }}
-  HOST: ${{ secrets.HOST }}
-  SSH_USER: ${{ secrets.USER }}
-  TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-  TELEGRAM_TO: ${{ secrets.TELEGRAM_TO }}
+name: Foodgram CI/CD
+on: [push]
 
 jobs:
-  backend_tests:
-    name: "Backend: lint & tests"
+  build_and_push_backend:
+    name: Build & Push Backend
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-
-    services:
-      postgres:
-        image: postgres:13-alpine
-        env:
-          POSTGRES_DB: foodgram
-          POSTGRES_USER: foodgram
-          POSTGRES_PASSWORD: password
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd "pg_isready -U foodgram -d foodgram"
-          --health-interval 5s
-          --health-timeout 3s
-          --health-retries 20
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
-          python-version: "3.12"
-          cache: "pip"
-
-      - name: Install dependencies
-        working-directory: backend
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install flake8==6.0.0
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-
-      - name: Django migrate (CI DB)
-        env:
-          DB_ENGINE: django.db.backends.postgresql
-          DB_NAME: foodgram
-          POSTGRES_USER: foodgram
-          POSTGRES_PASSWORD: password
-          DB_HOST: 127.0.0.1
-          DB_PORT: 5432
-          SECRET_KEY: test-secret
-          DEBUG: "false"
-          ALLOWED_HOSTS: localhost,127.0.0.1
-          CSRF_TRUSTED_ORIGINS: http://localhost
-        working-directory: backend
-        run: |
-          python manage.py migrate --noinput || echo "skip migrate"
-          python manage.py check || true
-
-      - name: Lint (flake8)
-        continue-on-error: true
-        run: python -m flake8 backend/
-
-      - name: Run tests (pytest if present)
-        env:
-          DB_ENGINE: django.db.backends.postgresql
-          DB_NAME: foodgram
-          POSTGRES_USER: foodgram
-          POSTGRES_PASSWORD: password
-          DB_HOST: 127.0.0.1
-          DB_PORT: 5432
-          SECRET_KEY: test-secret
-          DEBUG: "false"
-        working-directory: backend
-        run: |
-          if [ -f pytest.ini ] || [ -f tox.ini ] || ls -1 tests* 2>/dev/null | grep -q .; then
-            python -m pip install pytest
-            pytest -q
-          else
-            echo "no tests found, skip"
-          fi
-
-  build_backend:
-    name: Build & push backend
-    needs: backend_tests
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: docker/build-push-action@v5
         with:
-          username: ${{ env.REGISTRY_USER }}
-          password: ${{ env.REGISTRY_PASS }}
-
-      - name: Build & push backend
-        uses: docker/build-push-action@v6
-        with:
-          context: ./backend
-          file: ./backend/Dockerfile
+          context: backend
           push: true
-          platforms: linux/amd64
-          tags: |
-            ${{ env.REGISTRY_USER }}/foodgram_backend:latest
-            ${{ env.REGISTRY_USER }}/foodgram_backend:sha-${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
-  build_frontend:
-    name: Build & push frontend
+  build_and_push_frontend:
+    name: Build & Push Frontend
     runs-on: ubuntu-latest
-    timeout-minutes: 20
-
+    needs: build_and_push_backend
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
-          username: ${{ env.REGISTRY_USER }}
-          password: ${{ env.REGISTRY_PASS }}
-
-      - name: Prepare frontend Dockerfile
-        run: |
-          cat > frontend/Dockerfile.ci <<'EOF'
-          FROM node:18-alpine AS build
-          WORKDIR /app
-          COPY frontend/package*.json ./
-          RUN npm ci --no-audit --no-fund --legacy-peer-deps
-          COPY frontend/ ./
-          RUN npm run build
-          FROM nginx:1.25-alpine
-          COPY --from=build /app/build /usr/share/nginx/html
-          RUN printf "ok" > /usr/share/nginx/html/healthz
-          HEALTHCHECK --interval=10s --timeout=3s --retries=10 \
-            CMD wget -qO- http://127.0.0.1/healthz || exit 1
-          EOF
-
-      - name: Build & push frontend
-        uses: docker/build-push-action@v6
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: docker/build-push-action@v5
         with:
-          context: .
-          file: frontend/Dockerfile.ci
+          context: frontend
+          file: frontend/Dockerfile.prod
           push: true
-          platforms: linux/amd64
-          tags: |
-            ${{ env.REGISTRY_USER }}/foodgram_frontend:latest
-            ${{ env.REGISTRY_USER }}/foodgram_frontend:sha-${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  build_gateway:
-    name: Build & push gateway
-    needs: [build_backend, build_frontend]
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ env.REGISTRY_USER }}
-          password: ${{ env.REGISTRY_PASS }}
-
-      - name: Prepare gateway Dockerfile
-        run: |
-          mkdir -p infra
-          cat > infra/Dockerfile.gateway <<'EOF'
-          FROM node:18-alpine AS front
-          WORKDIR /app
-          COPY frontend/package*.json ./
-          RUN npm ci --no-audit --no-fund --legacy-peer-deps
-          COPY frontend/ ./
-          RUN npm run build
-          FROM nginx:1.25-alpine
-          COPY nginx.conf /etc/nginx/conf.d/default.conf
-          COPY --from=front /app/build /usr/share/nginx/html
-          HEALTHCHECK --interval=10s --timeout=3s --retries=10 \
-            CMD wget -qO- http://127.0.0.1/nginx-health || exit 1
-          EOF
-
-      - name: Build & push gateway
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: infra/Dockerfile.gateway
-          push: true
-          platforms: linux/amd64
-          tags: |
-            ${{ env.REGISTRY_USER }}/foodgram_gateway:latest
-            ${{ env.REGISTRY_USER }}/foodgram_gateway:sha-${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
 
   deploy:
-    name: Deploy to server
-    needs: build_gateway
+    name: SSH deploy
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-
+    needs: build_and_push_frontend
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Ensure remote dir
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ env.HOST }}
-          username: ${{ env.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          script: mkdir -p ~/foodgram
-
-      - name: Copy compose file
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ env.HOST }}
-          username: ${{ env.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          source: "docker-compose.production.yml"
-          target: "foodgram"
-          overwrite: true
-
-      - name: Deploy
-        uses: appleboy/ssh-action@master
+      - uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script_stop: true
           script: |
-            cd foodgram
-            sudo docker compose -f docker-compose.production.yml pull
-            sudo docker compose -f docker-compose.production.yml down
-            sudo docker compose -f docker-compose.production.yml up -d
-            sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-            sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic --noinput
-            sudo docker compose -f docker-compose.production.yml exec backend python manage.py fill_ingredients_from_csv --path data/ingredients.csv
+            set -euo pipefail
+            cd /home/${{ secrets.USER }}/foodgram
+            sudo chown -R $USER:$USER /home/${{ secrets.USER }}/foodgram || true
+            git config --global --add safe.directory /home/${{ secrets.USER }}/foodgram || true
+            if [ -d .git ]; then
+              git fetch --all
+              git reset --hard origin/main
+              git clean -fd
+            fi
+            sudo sed -i 's/\r$//' /Users/pyryanova/Dev/foodgram/docker-compose.production.yml || true
+            sudo docker-compose -f /Users/pyryanova/Dev/foodgram/docker-compose.production.yml pull
+            sudo docker-compose -f /Users/pyryanova/Dev/foodgram/docker-compose.production.yml up -d
+            sudo docker-compose -f /Users/pyryanova/Dev/foodgram/docker-compose.production.yml exec -T backend python manage.py migrate --noinput
+            sudo docker-compose -f /Users/pyryanova/Dev/foodgram/docker-compose.production.yml exec -T backend python manage.py collectstatic --noinput
+            sudo docker-compose -f /Users/pyryanova/Dev/foodgram/docker-compose.production.yml exec -T backend python manage.py load_ingredients || true
 
-      - name: Telegram notify
-        if: ${{ success() }}
-        uses: appleboy/telegram-action@master
+  notify:
+    name: Telegram Notify
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - uses: appleboy/telegram-action@master
         with:
-          to: ${{ env.TELEGRAM_TO }}
-          token: ${{ env.TELEGRAM_TOKEN }}
-          message: "Foodgram: деплой успешно выполнен (commit ${GITHUB_SHA::7})"
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: "Foodgram: деплой успешно выполнен"
