--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -1,10 +1,51 @@
-name: Foodgram CI/CD
-on: [push]
+name: Main FOODGRAM workflow
+
+on: push
 
 jobs:
-  build_and_push_backend:
-    name: Build & Push Backend
+  tests:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:13.0-alpine
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8==6.0.0
+          pip install -r ./backend/requirements.txt
+      - name: Test with flake8 and django tests
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
+          DB_NAME: postgres
+          DB_ENGINE: django.db.backends.postgresql
+          SECRET_KEY: test-secret
+          DEBUG: "false"
+        run: |
+          python -m flake8 backend/
+          cd backend/
+          python manage.py test
+
+  build_and_push_to_docker_hub:
+    name: Push Docker image to DockerHub
+    runs-on: ubuntu-latest
+    needs: tests
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -12,16 +53,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v6
         with:
-          context: backend
+          context: ./backend/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
-  build_and_push_frontend:
-    name: Build & Push Frontend
+  build_frontend_and_push_to_docker_hub:
+    name: Push frontend Docker image to DockerHub
     runs-on: ubuntu-latest
-    needs: build_and_push_backend
+    needs: tests
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
@@ -29,49 +70,83 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v6
         with:
-          context: frontend
-          file: frontend/Dockerfile.prod
+          context: ./frontend/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
 
-  deploy:
-    name: SSH deploy
+  build_gateway_and_push_to_docker_hub:
+    name: Push gateway Docker image to DockerHub
     runs-on: ubuntu-latest
-    needs: build_and_push_frontend
+    needs: tests
     steps:
-      - uses: appleboy/ssh-action@master
+      - uses: actions/checkout@v4
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - uses: docker/build-push-action@v6
+        with:
+          context: ./infra/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_gateway:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build_and_push_to_docker_hub
+      - build_frontend_and_push_to_docker_hub
+      - build_gateway_and_push_to_docker_hub
+    steps:
+      - name: Ensure remote dir
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          script_stop: true
+          script: mkdir -p /home/${{ secrets.USER }}/foodgram
+
+      - name: Copy docker-compose.yml via ssh
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          source: "docker-compose.production.yml"
+          target: "/home/${{ secrets.USER }}/foodgram"
+          overwrite: true
+
+      - name: Executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
             set -euo pipefail
             cd /home/${{ secrets.USER }}/foodgram
             sudo chown -R $USER:$USER /home/${{ secrets.USER }}/foodgram || true
             git config --global --add safe.directory /home/${{ secrets.USER }}/foodgram || true
-            if [ -d .git ]; then
-              git fetch --all
-              git reset --hard origin/main
-              git clean -fd
-            fi
-            sudo sed -i 's/\r$//' /Users/pyryanova/Dev/foodgram/docker-compose.production.yml || true
-            sudo docker-compose -f /Users/pyryanova/Dev/foodgram/docker-compose.production.yml pull
-            sudo docker-compose -f /Users/pyryanova/Dev/foodgram/docker-compose.production.yml up -d
-            sudo docker-compose -f /Users/pyryanova/Dev/foodgram/docker-compose.production.yml exec -T backend python manage.py migrate --noinput
-            sudo docker-compose -f /Users/pyryanova/Dev/foodgram/docker-compose.production.yml exec -T backend python manage.py collectstatic --noinput
-            sudo docker-compose -f /Users/pyryanova/Dev/foodgram/docker-compose.production.yml exec -T backend python manage.py load_ingredients || true
+            sudo sed -i 's/\r$//' docker-compose.production.yml || true
+            sudo docker-compose -f docker-compose.production.yml pull
+            sudo docker-compose -f docker-compose.production.yml down
+            sudo docker-compose -f docker-compose.production.yml up -d
+            sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py migrate --noinput
+            sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py collectstatic --noinput
+            sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py fill_ingredients_from_csv --path data/ingredients.csv || true
 
-  notify:
-    name: Telegram Notify
+  send_message:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - uses: appleboy/telegram-action@master
+      - name: Send message
+        uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: "Foodgram: деплой успешно выполнен"
+          message: "Deploj foodgram uspeshno vypolnen!"
