--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -1,51 +1,28 @@
-name: Main FOODGRAM workflow
-
-on: push
+name: Foodgram CI/CD
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   tests:
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:13.0-alpine
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
-      - name: Install dependencies
+          python-version: "3.10"
+      - name: Install flake8
         run: |
           python -m pip install --upgrade pip
           pip install flake8==6.0.0
-          pip install -r ./backend/requirements.txt
-      - name: Lint (flake8, non-blocking)
+      - name: Lint (non-blocking)
         continue-on-error: true
         run: python -m flake8 backend/
-      - name: Run Django tests
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-          DB_HOST: 127.0.0.1
-          DB_PORT: 5432
-          DB_NAME: postgres
-          DB_ENGINE: django.db.backends.postgresql
-          SECRET_KEY: test-secret
-          DEBUG: "false"
-        run: |
-          cd backend/
-          python manage.py test
 
-  build_and_push_to_docker_hub:
-    name: Push Docker image to DockerHub
+  build_and_push_backend:
+    name: Build & Push Backend
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -57,12 +34,12 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - uses: docker/build-push-action@v6
         with:
-          context: ./backend/
+          context: ./backend
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
 
-  build_frontend_and_push_to_docker_hub:
-    name: Push frontend Docker image to DockerHub
+  build_and_push_frontend:
+    name: Build & Push Frontend
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -74,55 +51,39 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
       - uses: docker/build-push-action@v6
         with:
-          context: ./frontend/
+          context: ./frontend
+          file: ./frontend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
-
-  build_gateway_and_push_to_docker_hub:
-    name: Push gateway Docker image to DockerHub
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - uses: docker/build-push-action@v6
-        with:
-          context: ./infra/
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_gateway:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs:
-      - build_and_push_to_docker_hub
-      - build_frontend_and_push_to_docker_hub
-      - build_gateway_and_push_to_docker_hub
+      - build_and_push_backend
+      - build_and_push_frontend
     steps:
-      - name: Ensure remote dir
+      - name: SSH: prepare repo
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          script: mkdir -p /home/${{ secrets.USER }}/foodgram
+          script: |
+            set -euo pipefail
+            if [ ! -d "/home/${{ secrets.USER }}/foodgram/.git" ]; then
+              mkdir -p /home/${{ secrets.USER }}/foodgram
+              cd /home/${{ secrets.USER }}
+              git clone https://github.com/opyryanova/foodgram.git foodgram
+            fi
+            cd /home/${{ secrets.USER }}/foodgram
+            sudo chown -R $USER:$USER /home/${{ secrets.USER }}/foodgram || true
+            git config --global --add safe.directory /home/${{ secrets.USER }}/foodgram || true
+            git fetch --all
+            git reset --hard origin/main
+            git clean -fd
 
-      - name: Copy docker-compose.yml via ssh
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          source: "docker-compose.production.yml"
-          target: "/home/${{ secrets.USER }}/foodgram"
-          overwrite: true
-
-      - name: Executing remote ssh commands to deploy
+      - name: SSH: deploy with docker-compose v1
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -132,23 +93,24 @@ jobs:
           script: |
             set -euo pipefail
             cd /home/${{ secrets.USER }}/foodgram
-            sudo chown -R $USER:$USER /home/${{ secrets.USER }}/foodgram || true
-            git config --global --add safe.directory /home/${{ secrets.USER }}/foodgram || true
             sudo sed -i 's/\r$//' docker-compose.production.yml || true
+            sudo sed -i 's/\r$//' nginx.conf || true
             sudo docker-compose -f docker-compose.production.yml pull
             sudo docker-compose -f docker-compose.production.yml down
             sudo docker-compose -f docker-compose.production.yml up -d
             sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py migrate --noinput
             sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py collectstatic --noinput
+            sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py load_ingredients || \
             sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py fill_ingredients_from_csv --path data/ingredients.csv || true
+            sudo docker-compose -f docker-compose.production.yml exec -T backend python manage.py import_tags || true
 
-  send_message:
+  notify:
+    name: Telegram Notify
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-      - name: Send message
-        uses: appleboy/telegram-action@master
+      - uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: "Deploj foodgram uspeshno vypolnen!"
+          message: "Фудграм: деплой успешно выполнен"
